# nexus-examples

./: .env.example  .gitignore  .gitmodules  README.md  deploy-mailbox.sh  deploy.sh  forge_output1.txt  forge_output2.txt  hardhat.config.ts  hardhat2.config.ts  package-lock.json  package.json  remappings.txt
.openzeppelin/: sepolia.json  unknown-271.json
.zksolc-libraries-cache/: missing_library_dependencies.json
cache-zk/: solidity-files-cache.json  validations.json
cache_forge/: solidity-files-cache.json
configs/: era2_general.yaml  era_general.yaml
contracts/: Lock.sol  NexusBridge.sol  NexusProofManager.sol  SparseMerkleTree.sol  Storage.sol  StorageProof.sol
contracts/bridge/: NexusBridge.sol  README.md
contracts/bridge-mailbox/: NexusBridge.sol
contracts/demo/: Payment.sol
contracts/interfaces/: IAvail.sol  INexusProofManager.sol
contracts/lib/: JellyfishMerkleTreeVerifier.sol
contracts/mock/: ERC20.sol  ERC721.sol  statemanager.sol
contracts/src/: NexusMailbox.sol  NexusProofManager.sol
contracts/zknft-mailbox/: NFT.sol  (+3 more)
off-chain/: .env.example  Cargo.toml  bridge.json  erc20.json  nexusStateManager.json
off-chain/bridge/: .env.example  Cargo.toml  bridge.json  nexusStateManager.json
off-chain/bridge/src/: bridge.rs
scripts/: 2_deploy.ts  2_geth.ts  3_zksync.ts  4_zksync2.ts  5_jmt.ts  6_nft_zksync.ts  7_bridge_sepolia.ts  7_deploy_bridge.ts  7_nftpayment_zksync.ts  deploy.ts
test/: Bridge.ts  Lock.ts  NexusProofManager.ts  bridge.sol  bridge.test.ts  zkNFT.sol
uniswap/: hardhat.config.ts  package.json  tsconfig.json
(+363 files in other folders)
