[package]
name = "off-chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
dotenvy = "0.15.6"
anyhow = "1.0.75"
ethers = "2.0"
hex-literal = "0.3"
hex = "0.4.3"
rlp = "0.5.2"
serde = "1.0.193"
serde_json = "1.0.108"
sha3 = "0.10.8"
tokio = { version = "1", features = ["full"] }
indicatif = "0.17"
reqwest = { version = "0.11", features = ["blocking"] }
console = "0.15"

[[bin]]
name = "bridge"
path = "src/main.rs"